Update README with detailed project information
Expanded project description and added detailed sections on features, tech stack, architecture, genetic algorithm, getting started, database setup, running the application, and project structure.